--- a/index.html
+++ b/index.html
@@ -392,18 +392,26 @@ div.tocify {
 </script>
 <div id="accommodation" class="section level1">
 <h1>ACCOMMODATION</h1>
-<p>May is already high season in Palma, so, many hotels are already fully booked with individual and groups reservations, but we are happy to offer you two hotel options:</p>
-<div id="main-hotel-hotel-costa-azul" class="section level2">
-<h2>Main Hotel: Hotel Costa Azul</h2>
+<p>May is already high season in Palma, so, many hotels are already fully booked with individual and groups reservations, but we are happy to offer you three hotel options, one of them is offering very good rates.</p>
+<div id="main-hotel-catalonia-majorica" class="section level2">
+<h2>Main Hotel: Catalonia Majorica</h2>
+<iframe src="Catalonia Majorica/majorica.html" frameborder="0" width="100%" height="1250" scrolling="no">
+</iframe>
+</div>
+<div id="alternative-hotels" class="section level2 tabset tabset-fade tabset-pills">
+<h2>Alternative Hotels</h2>
+<div id="hotel-costa-azul" class="section level3">
+<h3>Hotel Costa Azul</h3>
 <iframe src="Costa Azul/costaazul.html" frameborder="0" width="100%" height="1250" scrolling="no">
 </iframe>
 <p></br></p>
 </div>
-<div id="alternative-hotel" class="section level2">
-<h2>Alternative Hotel</h2>
+<div id="hotel-melia-palma-marina" class="section level3">
+<h3>Hotel Melia Palma Marina</h3>
 <iframe src="Melia/melia marina.html" frameborder="0" width="100%" height="1300" scrolling="no">
 </iframe>
 <p></br></p>
+</div>
 </div>
 <div id="map" class="section level2">
 <h2>Map</h2>
